--- a/index.html
+++ b/index.html
@@ -65,6 +65,32 @@
         .detail-body { font-size: 1.05rem; line-height: 1.9; color: rgba(247, 240, 224, 0.85); }
         .detail-body h4 { color: var(--gold); margin: 25px 0 10px; font-size: 1.2rem; border-left: 4px solid var(--gold); padding-left: 15px; }
         .detail-body ul { margin-left: 20px; margin-bottom: 20px; }
+        /* สไตล์สำหรับรูปภาพประกอบแบบ Interactive */
+        .img-container {
+            width: 100%;
+            margin: 25px 0;
+            border-radius: 12px;
+            overflow: hidden;
+            border: 1px solid var(--gold);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+            position: relative;
+        }
+        .img-container img {
+            width: 100%;
+            display: block;
+            transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+        }
+        .img-container:hover img {
+            transform: scale(1.08);
+        }
+        .img-caption {
+            background: rgba(10, 8, 6, 0.8);
+            color: var(--gl);
+            padding: 10px;
+            font-size: 0.8rem;
+            text-align: center;
+            border-top: 1px solid var(--gold);
+        }
         .reference-box { margin-top: 50px; padding: 20px; border-top: 1px dashed var(--gold); font-size: 0.85rem; color: rgba(247, 240, 224, 0.5); }
 
         /* Buttons */
