--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="sub-t">สายใยแห่งพระมหากรุณาธิคุณ: สมเด็จพระพันปีหลวงกับมรดกโขนไทย</div>
         
         <div class="img-container">
-            <img src="queen.jpg" alt="สมเด็จพระนางเจ้าสิริกิติ์ พระบรมราชินีนาถ">
+            <img src="queen.webp" alt="สมเด็จพระนางเจ้าสิริกิติ์ พระบรมราชินีนาถ">
             <div class="img-caption">พระอัจฉริยภาพในการอนุรักษ์ศิลปวัฒนธรรมของชาติ</div>
         </div>
 
