--- a/index.html
+++ b/index.html
@@ -111,23 +111,45 @@
         </div>
     </section>
 
-    <section id="p1" class="page">
-        <h1>KNOWLEDGE HUB</h1>
-        <div class="sub-t">เจาะลึกมรดกวัฒนธรรมไทย</div>
-        <div class="grid-info">
-            <div class="card" onclick="alert('แสดงเนื้อหาหัวโขน')">
-                <h3>🎭 หัวโขน</h3>
-                <p>รหัสลับสีหน้าและมงกุฎบ่งบอกศักดิ์ศรี</p>
+  <section id="p1" class="page">
+    <h1 style="font-family:'Cinzel Decorative'; color:var(--gold); font-size: 2.5rem;">KNOWLEDGE HUB</h1>
+    <div class="sub-t">มรดกวัฒนธรรมที่จับต้องไม่ได้ของมนุษยชาติ (UNESCO)</div>
+
+    <div class="detail-container" style="max-width: 900px; text-align: left; background: rgba(255,255,255,0.03); padding: 40px; border-radius: 20px; border: 1px solid rgba(201, 146, 42, 0.2);">
+        <h2 style="text-align: left; color: var(--gl); font-family: 'Noto Serif Thai'; font-weight: 700; border-left: 5px solid var(--gold); padding-left: 15px; margin-bottom: 20px;">โขนพระราชทาน</h2>
+        
+        <div class="detail-body" style="font-size: 1.1rem; line-height: 2; color: var(--cream);">
+            <p style="margin-bottom: 20px; text-indent: 2em;">
+                ประเทศไทย <strong>"โขน"</strong> เป็นศาสตร์และศิลปะการแสดงชั้นสูงของไทยที่หลอมรวมศิลปะของชาติหลากหลายแขนง นับแต่วรรณกรรม วรรณศิลป์ นาฏศิลป์ คีตศิลป์ หัตถศิลป์ และพัสตราภรณ์อันงดงามตามแบบฉบับโบราณ รวมถึงการจัดฉากและแสง เสียง ที่ยิ่งใหญ่
+            </p>
+
+            <div class="img-container" style="max-width: 100%; margin: 30px 0;">
+                <img src="khon_performance.webp" alt="การแสดงโขนพระราชทาน" style="width: 100%; border-radius: 10px;">
+                <div class="img-caption">การแสดงโขนพระราชทาน มรดกศิลป์แผ่นดิน</div>
             </div>
-            <div class="card" onclick="alert('แสดงเนื้อหาการแต่งกาย')">
-                <h3>👗 การแต่งกาย</h3>
-                <p>ความวิจิตรของงานปักสะดึงกรึงไหม</p>
+
+            <p style="margin-bottom: 20px; text-indent: 2em;">
+                โขนพระราชทานเริ่มขึ้นในปี พ.ศ. ๒๕๕๐ เป็นการแสดงเรื่องรามเกียรติ์ ตอนพรหมาศ ในรูปแบบการบรรเลงคอนเสิร์ตโดยวงโยธวาทิต กองดุริยางค์กองทัพบก เพื่อเฉลิมฉลองพระบาทสมเด็จพระบรมชนกาธิเบศร มหาภูมิพลอดุลยเดชมหาราช บรมนาถบพิตร ทรงเจริญพระชนมพรรษา ๘๐ พรรษา และสมเด็จพระนางเจ้าสิริกิติ์ พระบรมราชินีนาถ พระบรมราชชนนีพันปีหลวง ทรงเจริญพระชนมพรรษา ๗๕ พรรษา
+            </p>
+
+            <p style="margin-bottom: 20px;">
+                จากวันนั้น มีพระราชเสาวนีย์ว่าประชาชนชาวไทยไม่ใคร่มีโอกาสได้ชมโขน จึงทรงพระกรุณาโปรดเกล้าฯ ให้ประชุมผู้เชี่ยวชาญ และโปรดเกล้าฯ ให้จัดสร้างเครื่องแต่งกายโขนขึ้นใหม่ โดยทรงกำชับให้ยึดถือรูปแบบโบราณ แต่มีความคงทนและสวยงามยิ่งขึ้น จนได้รับความนิยมอย่างกว้างขวางถึงปัจจุบัน
+            </p>
+
+            <div class="card" style="background: rgba(201, 146, 42, 0.1); border: 1px solid var(--gold); margin: 30px 0;">
+                <h3 style="color: var(--gl); margin-bottom: 10px;">UNESCO Recognition</h3>
+                <p style="font-size: 1rem;">
+                    องค์การยูเนสโกได้ประกาศขึ้นทะเบียน <strong>“โขน”</strong> ของไทย เป็นรายการตัวแทนมรดกวัฒนธรรมที่จับต้องไม่ได้ของมนุษยชาติ เมื่อวันที่ ๒๙ พฤศจิกายน ๒๕๖๑ ถือเป็นการยืนยันคุณค่ามรดกวัฒนธรรมไทยในระดับสากล
+                </p>
             </div>
         </div>
+
         <div class="btn-wrap">
             <button class="btn-gold" onclick="showPage('p0')">กลับหน้าแรก</button>
+            <button class="btn-gold" onclick="showPage('p2')">ไปหน้า AI ออกแบบ →</button>
         </div>
-    </section>
+    </div>
+</section>
 
     <script>
         function showPage(pageId) {
