--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
 
     <div class="detail-container" style="max-width: 900px; text-align: left; background: rgba(255,255,255,0.03); padding: 40px; border-radius: 20px; border: 1px solid rgba(201, 146, 42, 0.2);">
         <h2 style="text-align: left; color: var(--gl); font-family: 'Noto Serif Thai'; font-weight: 700; border-left: 5px solid var(--gold); padding-left: 15px; margin-bottom: 20px;">โขนพระราชทาน</h2>
+
+        <img src="https://raw.githubusercontent.com/TiTle-GS/Khon-Mask-Lab/main/khon-3.jpg" alt="สมเด็จพระพันปีหลวง">
         
         <div class="detail-body" style="font-size: 1.1rem; line-height: 2; color: var(--cream);">
             <p style="margin-bottom: 20px; text-indent: 2em;">
