--- a/index.html
+++ b/index.html
@@ -298,13 +298,15 @@
 
         <!-- Right Section: Tools Sidebar -->
         <aside class="w-full lg:w-[400px] sidebar-right custom-scrollbar overflow-y-auto p-8 h-full">
-               <button onclick="randomizeAll()" class="text-sm text-zinc-400 hover:text-[#c5a059] transition-colors flex items-center gap-2">
+           <div class="hidden md:flex items-center gap-6">
+            <button onclick="randomizeAll()" class="text-sm text-zinc-400 hover:text-[#c5a059] transition-colors flex items-center gap-2">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-9-9c2.52 0 4.93 1 6.74 2.74L21 8"/><path d="M21 3v5h-5"/></svg>
                 สุ่มรูปแบบ
             </button>
             <button onclick="exportMask()" class="bg-[#c5a059] text-black px-6 py-2 rounded-full text-sm font-bold hover:bg-[#b08d4a] transition-all shadow-lg active:scale-95">
                 บันทึกรูปภาพ
             </button>
+        </div>
             <h2 class="text-[#c5a059] font-bold text-xl mb-6 flex items-center gap-2">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 20h9"/><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/></svg>
                 แผงควบคุมการออกแบบ
