--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
         <!-- Right Section: Tools Sidebar -->
         <aside class="w-full lg:w-[400px] sidebar-right custom-scrollbar overflow-y-auto p-8 h-full">
-           <div class="hidden md:flex items-center gap-10">
+           <div class="hidden md:flex items-center gap-10 ml-auto">
             <button onclick="randomizeAll()" class="text-sm text-zinc-400 hover:text-[#c5a059] transition-colors flex items-center gap-2">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-9-9c2.52 0 4.93 1 6.74 2.74L21 8"/><path d="M21 3v5h-5"/></svg>
                 สุ่มรูปแบบ
