--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
         
         <!-- Left Section: Viewport / Canvas Area -->
         <div class="flex-1 flex flex-col items-center justify-center p-6 md:p-12 relative">
-            <div id="capture-area" class="canvas-area w-full max-w-[650px] aspect-square rounded-[2.5rem] flex items-center justify-center relative shadow-2xl overflow-hidden border border-zinc-800">
+            <!--test1-->
+            <div id="capture-area" class="canvas-area w-full max-w-[auto] aspect-square rounded-[2.5rem] flex items-center justify-center relative shadow-2xl overflow-hidden border border-zinc-800">
                 <div class="absolute inset-0 opacity-10 pointer-events-none">
                     <div class="absolute top-1/2 left-0 w-full h-[1px] bg-white"></div>
                     <div class="absolute top-0 left-1/2 w-[1px] h-full bg-white"></div>
