--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     <div class="absolute top-0 left-1/2 w-[1px] h-full bg-white"></div>
                 </div>
 
-                <svg id="main-svg" viewBox="0 0 400 400" class="w-4/5 h-4/5 drop-shadow-[0_35px_60px_rgba(0,0,0,0.8)]">
+                <svg id="main-svg" viewBox="0 0 400 400" class="w-full h-full drop-shadow-[0_35px_60px_rgba(0,0,0,0.8)]">
                     <path d="M140 85 L260 85 L255 135 L145 135 Z" fill="rgba(0,0,0,0.4)" transform="translate(8,8)" />
                     
                     <!-- Crown Group -->
