--- a/index.html
+++ b/index.html
@@ -570,35 +570,42 @@
     </section>
 
 <section id="p4" class="page">
-    <h1 class="text-3xl md:text-5xl mb-2">AR EXPERIENCE</h1>
-    <div class="sub-t">สวมหัวโขนผ่านเทคโนโลยีจำลองใบหน้า (Face Tracking)</div>
+        <h1 class="text-3xl md:text-5xl mb-2">AR EXPERIENCE</h1>
+        <div class="sub-t">สวมหัวโขนผ่านเทคโนโลยีจำลองใบหน้า (Face Tracking)</div>
 
-    <div class="relative w-full max-w-4xl aspect-[3/4] md:aspect-video rounded-[2.5rem] overflow-hidden border-2 border-[#c5a059] shadow-2xl bg-black mx-auto">
-        
-        <div id="ar-container" class="w-full h-full">
-            <a-scene 
-                mindar-face="autoStart: false" 
-                embedded 
-                color-space="sRGB" 
-                renderer="colorManagement: true, transparent: true" 
-                vr-mode-ui="enabled: false" 
-                device-orientation-permission-ui="enabled: false">
+        <div class="relative w-full max-w-4xl aspect-[3/4] md:aspect-video rounded-[2.5rem] overflow-hidden border-2 border-[#c5a059] shadow-2xl bg-black mx-auto">
+            <div id="ar-container" class="w-full h-full">
+                <a-scene mindar-face="autoStart: false" embedded color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+                    <a-camera active="false" position="0 0 0" look-controls="enabled: false"></a-camera>
+
+                    <a-entity mindar-face-target="anchorIndex: 168">
+                        <a-sphere id="ar-mask-base" position="0 0.5 -0.5" radius="0.4" scale="1 1.2 0.8" material="color: #16a34a; metalness: 0.6; roughness: 0.2">
+                            <a-cone position="0 0.8 0" radius-bottom="0.2" height="0.6" material="color: #FFD700"></a-cone>
+                        </a-sphere>
+                    </a-entity>
+                </a-scene>
+            </div>
+
+            <div class="absolute bottom-0 left-0 right-0 p-6 bg-gradient-to-t from-black/90 to-transparent flex flex-col items-center gap-4">
+                <div class="flex gap-2 overflow-x-auto pb-2 w-full justify-center no-scrollbar">
+                    <button onclick="changeARMask('giant')" class="px-4 py-2 bg-zinc-800 rounded-full text-xs border border-[#c5a059] whitespace-nowrap">ยักษ์</button>
+                    <button onclick="changeARMask('monkey')" class="px-4 py-2 bg-zinc-800 rounded-full text-xs border border-white/20 whitespace-nowrap">ลิง</button>
+                    <button onclick="changeARMask('human')" class="px-4 py-2 bg-zinc-800 rounded-full text-xs border border-white/20 whitespace-nowrap">เทวดา</button>
+                    <button onclick="changeARMask('nang')" class="px-4 py-2 bg-zinc-800 rounded-full text-xs border border-white/20 whitespace-nowrap">นาง</button>
+                    <button onclick="changeARMask('rishi')" class="px-4 py-2 bg-zinc-800 rounded-full text-xs border border-white/20 whitespace-nowrap">ฤๅษี</button>
+                </div>
                 
-                <a-camera active="false" position="0 0 0" look-controls="enabled: false"></a-camera>
+                <div class="flex gap-4 items-center">
+                    <button id="start-ar-btn" onclick="startAR()" class="btn-gold">เปิดกล้อง AR</button>
+                    <button id="capture-btn" onclick="captureARPhoto()" class="hidden w-16 h-16 bg-white rounded-full border-4 border-[#c5a059] shadow-lg active:scale-95 flex items-center justify-center">
+                         <div class="w-12 h-12 rounded-full border-2 border-zinc-200"></div>
+                    </button>
+                </div>
+            </div>
 
-                <a-entity mindar-face-target="anchorIndex: 168">
-                    <a-sphere id="ar-mask-base" position="0 0.5 -0.5" radius="0.4" scale="1 1.2 0.8" material="color: #16a34a; metalness: 0.6; roughness: 0.2">
-                        <a-cone position="0 0.8 0" radius-bottom="0.2" height="0.6" material="color: #FFD700"></a-cone>
-                    </a-sphere>
-                </a-entity>
-            </a-scene>
+            <div id="flash-effect" class="absolute inset-0 bg-white opacity-0 pointer-events-none transition-opacity duration-100"></div>
         </div>
-        <div class="absolute bottom-0 left-0 right-0 p-6 bg-gradient-to-t from-black/90 to-transparent flex flex-col items-center gap-4">
-            ... (โค้ดปุ่มเดิมของคุณครู) ...
-        </div>
-    </div>
-</section>
-
+    </section>
     <section id="p5" class="page">
         <h1>BUBBLE WALL</h1>
         <div class="sub-t">คลังภาพมรดกไทยดิจิทัลจากฝีมือคุณ</div>
