--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </nav>
 
     <section id="p0" class="page active">
-        <h1>THE ROYAL CONNECTION</h1>
+        <h1 style="font-family:'Cinzel Decorative'; color:var(--gold); font-size: 2.5rem;">THE ROYAL CONNECTION</h1>
         <div class="sub-t">สมเด็จพระพันปีหลวงกับมรดกโขนไทย</div>
         
         <div class="img-container">
