--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     </div>
 </section>
 
-    : <section id="p2" class="page active h-screen overflow-hidden p-0 pt-[64px]">
+    <section id="p2" class="page active h-screen overflow-hidden p-0 pt-[64px]">
             <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;700&family=Kanit:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
@@ -246,7 +246,7 @@
         <!-- Left Section: Viewport / Canvas Area -->
         <div class="flex-1 flex flex-col items-center justify-center p-6 md:p-12 relative">
             <!--test1-->
-            <iv id="capture-area" class="canvas-area h-[70vh] lg:h-[80%] aspect-square rounded-[2.5rem] flex items-center justify-center relative shadow-2xl overflow-hidden border border-zinc-800">
+            <div id="capture-area" class="canvas-area h-[70vh] lg:h-[80%] aspect-square rounded-[2.5rem] flex items-center justify-center relative shadow-2xl overflow-hidden border border-zinc-800">
                 <div class="absolute inset-0 opacity-10 pointer-events-none">
                     <div class="absolute top-1/2 left-0 w-full h-[1px] bg-white"></div>
                     <div class="absolute top-0 left-1/2 w-[1px] h-full bg-white"></div>
